--- a/resetti.css
+++ b/resetti.css
@@ -1,8 +1,8 @@
+/* Make some useful variables available in the global scope */
 :root {
   --system-fonts: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
-html,
 body,
 h1,
 h2,
@@ -10,23 +10,8 @@ h3,
 h4,
 h5,
 h6,
-a,
 p,
-span,
-em,
-small,
-strong,
-sub,
-sup,
-mark,
-del,
-ins,
-strike,
-abbr,
-dfn,
 blockquote,
-q,
-cite,
 code,
 pre,
 ol,
@@ -69,7 +54,6 @@ th,
 td {
   margin: 0;
   padding: 0;
-  border: 0;
 }
 
 /**
@@ -189,6 +173,7 @@ label,
 select,
 summary,
 textarea,
+details,
 [tabindex] {
   -ms-touch-action: manipulation; /* 1 */
   touch-action: manipulation; /* 2 */
