--- a/resetti.css
+++ b/resetti.css
@@ -1,6 +1,7 @@
 /* Make some useful variables available in the global scope */
 :root {
-  --system-fonts: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  --system-fonts: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: var(--root-font-size);
 }
 
 body,
@@ -45,15 +46,9 @@ td {
   padding: 0;
 }
 
-/**
- * 1. Prevent certain mobile browsers from automatically zooming fonts.
- * 2. Smooth scroll  
- */
 html {
   line-height: 1.5;
-  -ms-text-size-adjust: 100%; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 1 */
-  scroll-behavior: smooth; /* 2 */
+  scroll-behavior: smooth;
 }
 
 * {
@@ -75,7 +70,6 @@ abbr[title] {
   text-decoration: underline dotted;
   cursor: help;
   border-bottom: 0;
-  text-decoration-skip-ink: none;
 }
 
 hr {
